# MachineLearning

imageServer0/: CMakeLists.txt  README.txt  caffe  caffeclassifier.cpp  caffeclassifier.h  main.cpp  netwrapper.cpp  netwrapper.h
imagesciencepythongenericserver/: README  _init_paths.py  changelog  convertmean.py  genderPredictor.py  getSQSmessage.py  hitserver.sh  logging.conf  modelClass.py  par.sh  preprocess.py  script.sh  utility.py  webapp.py
